[gd_scene load_steps=5 format=3 uid="uid://bifh4snhme56h"]

[ext_resource type="Script" uid="uid://crwaqtgdnh25c" path="res://menu.gd" id="1_lti8b"]
[ext_resource type="Texture2D" uid="uid://d1nr54qykg53a" path="res://20250618_154133.jpg" id="2_ouk20"]

[sub_resource type="LabelSettings" id="LabelSettings_ouk20"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_lti8b"]
font_size = 30

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 560.0
offset_top = 98.0
offset_right = 935.0
offset_bottom = 477.0
script = ExtResource("1_lti8b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -556.0
offset_top = -93.0
offset_right = 718.0
offset_bottom = 620.0
mouse_filter = 2
texture = ExtResource("2_ouk20")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 322.0
offset_bottom = 321.0
mouse_filter = 0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Dur√©e de la partie"
label_settings = SubResource("LabelSettings_ouk20")

[node name="GameDurationSelector" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choix de la musique"
label_settings = SubResource("LabelSettings_lti8b")

[node name="MusicSelector" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "JOUER"

[node name="ThemeButton" type="OptionButton" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="DebugLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="item_selected" from="VBoxContainer/ThemeButton" to="." method="_on_theme_button_item_selected"]
